--- a/style.css
+++ b/style.css
@@ -810,7 +810,7 @@
 
 
 
-  .open-contact-btn {
+  .open-contact-btn .lang-contactbtn {
     padding: 10px 25px;
     background: linear-gradient(to right, #5865F2, #404eed);
     color: white;
